# 2d-renderer-v1

./: Cargo.toml
src/: context.rs  gui.rs  lib.rs  main.rs  pipeline.rs  texture.rs
src/shaders/: builtin_circle.wgsl  builtin_line.wgsl  builtin_quad.wgsl
