[package]
name = "bm"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.6"
glam = "0.24.2"
wgpu = { version = "0.18", features = ["glsl"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

anyhow = "1.0"
nalgebra = "0.32.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
