[package]
name = "bm"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.0"
glam = "0.24.2"
wgpu = { version = "0.19", features = ["glsl"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

egui = "0.26.0"
egui-winit = "0.26.0"
egui-wgpu = "0.26.0"


anyhow = "1.0"
nalgebra = "0.32.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
